--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 
     <section id="Services" class="my-5">
         <div class="container">
-            <h3 class="text-center fw-bold mb-4">
-                <span class="border-bottom border-primary border-3 pb-1">Services</span>
-            </h3>
-            <p class="text-center text-muted mb-4">
-                 I offer creative services that bring visual joy and meaning:
-            </p>
+            <div class="text-center">
+                <h4 class="fw-bold border-bottom 
+                            border-5 border-primary 
+                            p-1 d-inline-block fs-1">Services</h4>
+                <p class="mb-4">I offer creative services that bring visual joy and meaning:</p>
+            </div>
             <div class="row g-4">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="d-flex p-3 border rounded shadow-sm h-100 align-items-start gap-3">
@@ -117,7 +117,7 @@
                         </div>
                         <div>
                             <h5 class="fw-bold">Visual Branding Design</h5>
-                            <p class="mb-0">Create a brand that’s not only beautiful, but also meaningful</p>
+                            <p class="mb-0">Create a brand thats not only beautiful, but also meaningful</p>
                         </div>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         </div>
                         <div>
                             <h5 class="fw-bold">Canva Mini Class & Coaching</h5>
-                            <p class="mb-0">Designing doesn’t have to be complicated.</p>
+                            <p class="mb-0">Designing doesnt have to be complicated.</p>
                         </div>
                     </div>
                 </div>
@@ -185,27 +185,25 @@
     </section>
     
     <section class="text-white text-center py-5 mt-5 opacity-75" style="background-image: url('img/stats-bg.jpg'); background-size: cover; background-position: center;">
-  <div class="row w-100 d-flex align-items-centerjustify-content-center">
-    <div class="col-12 col-md-6 col-lg-3">
-      <h3 class="fw-bold">200+</h3>
-      <p>Projects Completed</p>
-    </div>
-    <div class="col-12 col-md-6 col-lg-3">
-      <h3 class="fw-bold">100+</h3>
-      <p>Happy Clients</p>
-    </div>
-    <div class="col-12 col-md-6 col-lg-3">
-      <h3 class="fw-bold">500+</h3>
-      <p>Canva Templates Created</p>
-    </div>
-    <div class="col-12 col-md-6 col-lg-3">
-      <h3 class="fw-bold">100%</h3>
-      <p>Positive Feedback</p>
-    </div>
-  </div>
-</section>
-
-
+        <div class="row w-100 d-flex align-items-centerjustify-content-center">
+            <div class="col-12 col-md-6 col-lg-3">
+                <h3 class="fw-bold">200+</h3>
+                <p>Projects Completed</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h3 class="fw-bold">100+</h3>
+                <p>Happy Clients</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h3 class="fw-bold">500+</h3>
+                <p>Canva Templates Created</p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h3 class="fw-bold">100%</h3>
+                <p>Positive Feedback</p>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -259,8 +257,14 @@
         </div>
     </section>
 
-    <SECtion id="Contact">
+    <SECtion id="Contact" class="text-center">
         <div class="container">
+            <div class="p-3 mb-3">
+                <h4 class="fw-bold border-bottom 
+                            border-5 border-primary 
+                            p-1 d-inline-block fs-1">Contact</h4>
+                <p class="m-3">Let's connect! If you have any questions, collaboration ideas, or just want to say hello, feel free to reach out through the contact details below</p>
+            </div>
             <div class="row mt-5 border shadow">
                 <div class="col-12 col-md-4">
                             <div class="row g-4">
@@ -290,20 +294,19 @@
                             </div>
                         </div>
 
-                    <div class="col-12 col-md-4">
-                        <div class="row g-4">
-                            <div class="col p-3 ">
-                                <div class="border fs-1 rounded-circle d-inline-block text-primary bg-white border-primary p-4 ">
-                                    <i class="bi bi-envelope fs-1 text-primary"></i>
-
+                        <div class="col-12 col-md-4">
+                            <div class="row g-4">
+                                <div class="col p-3 d-flex align-items-center">
+                                    <div class="border fs-1 rounded-circle d-inline-block text-primary bg-white border-primary p-4 ">
+                                        <i class="bi bi-envelope fs-1 text-primary"></i>
+                                    </div>
+                                </div>
+                                <div class="col-8 p-3">
+                                    <h5 class="fw-bold fs-2">Email</h5>
+                                    <p>goyang@nailonglandia.gem</p>
                                 </div>
                             </div>
-                            <div class="col-8 p-3 text-start ">
-                                <h5 class="fw-bold fs-2">Email</h5>
-                                <p>goyang@nailonglandia.gem</p>
-                            </div>
                         </div>        
-                    </div>        
                 </div>  
             </div>
         </div>
